new: general refactoring and frontend work

--- a/tsmt/public/index.html
+++ b/tsmt/public/index.html
@@ -8,12 +8,12 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
             rel="stylesheet"
         />
-        <title>GUSMT</title>
+        <title>TSMT</title>
     </head>
     <body>
         <noscript>
             <strong
-                >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript
+                >We're sorry but TSMT doesn't work properly without JavaScript
                 enabled. Please enable it to continue.</strong
             >
         </noscript>
